modified:   page2.css 	modified:   page2.html

--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,8 @@
   <title>Tier-List Image</title>
 </head>
 <body>
-  <h1>Image Page</h1>
+  <h1>Rainbow Six Siege Tier List</h1>
+  <img src="my-image.png" width="800" alt="some picture">
   <p>Index Link <a href="index.html">Here</a></p>
   <p>First Page Link <a href="page1.html">Here</a></p>
   <p>Third Page Link <a href="page3.html">Here</a></p>
